# alice-001

./: .gitignore  new-vm-cutover-progress-2026-02-25.md  training-report-2026-02-24.md  triage-report-2026-02-25.md
config/: alice_001.py
deploy/jetson/: __init__.py  camera.py  data_logger.py  overnight.py  policy_server.py  safety.py  servo_controller.py  teleop.py
foundation/octo/: finetune.py
logs/: final-triage-report-2026-02-25.md  model_2999_full.pt
logs/alice_ball_transfer/: model_1000.pt  model_1250.pt  (+23 more)
rl_task/: pyproject.toml
rl_task/alice_ball_transfer/: __init__.py  ball_transfer_env.py  ball_transfer_env_cfg.py  ball_transfer_vision_env.py  ball_transfer_vision_env_cfg.py
rl_task/alice_ball_transfer/agents/: rsl_rl_ppo_cfg.py
rl_task/alice_ball_transfer/models/: __init__.py  asymmetric_ac.py  vision_backbone.py
rl_task/scripts/: diag_pd_drive.py  export_onnx.py  joint_test.py  play.py  record_eval.py  record_grid.py  record_scripted_motion.py  record_video.py  sweep_workspace.py  test_base_joint.py  test_env.py  train.py  train_vision.py  verify_motion.py
scripts/: cloud_validate.sh  convert_urdf_to_usd.sh  decimate_meshes.py  decompose_gripper.py  extract_from_assembly.py  inspect_step.py  prepare_meshes_for_urdf.py  record_motion_proof.py  run_demo_pack_10.sh  run_diagnostic_pack.sh  run_motion_triage.sh  runtime_sanity_check.sh  setup_nomachine.sh  urdf_to_usd.py  validate.py  validate_articulation_motion.py  validate_gui.py  validate_isaacsim.py  warmup_renderer.py
urdf/: alice_001.urdf
usd/: alice_001.usd  alice_001.usda
(+38 files in other folders)
